--- a/style.css
+++ b/style.css
@@ -28,6 +28,11 @@ nav a {
   line-break: strict;
   font-size: 8rem;
 }
+
+h2 {
+  color: brown;
+}
+
 @media (min-width: 600px) {
   nav {
     flex-direction: row;
